qc pass: p4lang: macsec with aes128ecb
qc pass: p4lang: macsec with aes192ecb
qc pass: p4lang: macsec with aes256ecb
qc pass: p4lang: macsec with sha224
qc pass: p4lang: macsec with sha384
qc pass: p4lang: macsec with sha3224
---------------------------------- 2022-01-15 15:28:23
no qc pass: p4lang: macsec with sha3224
no qc pass: p4lang: openvpn with sha3224
---------------------------------- 2022-01-15 20:20:32
qc pass: access total
qc pass: access tracker
qc pass: access negated tracker
qc pass: access follow tracker
---------------------------------- 2022-01-16 13:50:41
qc pass: bgp routemap filtering with nexthop
qc pass: bgp routepolicy filtering with nexthop
qc pass: bgp routemap filtering with nexthop with soft-reconfig
qc pass: bgp routepolicy filtering with nexthop with soft-reconfig
---------------------------------- 2022-01-23 06:12:55
qc pass: arcnet encapsulation
qc pass: infini encapsulation
---------------------------------- 2022-01-30 08:19:54
no qc pass: swipe with aes256gcm
no qc pass: swipe with aes192gcm
no qc pass: swipe with aes128gcm
no qc pass: skip with aes256gcm
no qc pass: skip with aes192gcm
no qc pass: skip with aes128gcm
no qc pass: satp with aes256gcm
no qc pass: satp with aes192gcm
no qc pass: satp with aes128gcm
no qc pass: openvpn with aes256gcm
no qc pass: openvpn with aes192gcm
no qc pass: openvpn with aes128gcm
no qc pass: macsec with aes256gcm
no qc pass: macsec with aes192gcm
no qc pass: macsec with aes128gcm
no qc pass: inlsp with aes256gcm
no qc pass: inlsp with aes192gcm
no qc pass: inlsp with aes128gcm
qc pass: inlsp with none encryption
qc pass: inlsp with none hash
qc pass: macsec with none encryption
qc pass: macsec with none hash
qc pass: openvpn with none encryption
qc pass: openvpn with none hash
qc pass: satp with none encryption
qc pass: satp with none hash
qc pass: skip with none encryption
qc pass: skip with none hash
qc pass: swipe with none encryption
qc pass: swipe with none hash