@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.1.30-cur, done by cs@nop.
--;-;-;2022-01-30 08:48:30, took 00:06:29, with 100 workers, on 2638 cases, 0 failed, 0 traces, 2 retries
+-;-;-;2022-01-30 08:57:12, took 00:07:15, with 100 workers, on 2642 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -1398,6 +1398,10 @@ http://sources.nop.hu/cfg/p4lang-crypt83.tst;p4lang-crypt83.tst;success;p4lang: 
 http://sources.nop.hu/cfg/p4lang-crypt84.tst;p4lang-crypt84.tst;success;p4lang: macsec with aes256ecb
 http://sources.nop.hu/cfg/p4lang-crypt85.tst;p4lang-crypt85.tst;success;p4lang: macsec with sha224
 http://sources.nop.hu/cfg/p4lang-crypt86.tst;p4lang-crypt86.tst;success;p4lang: macsec with sha384
+http://sources.nop.hu/cfg/p4lang-crypt87.tst;p4lang-crypt87.tst;success;p4lang: openvpn with none encryption
+http://sources.nop.hu/cfg/p4lang-crypt88.tst;p4lang-crypt88.tst;success;p4lang: openvpn with none hash
+http://sources.nop.hu/cfg/p4lang-crypt89.tst;p4lang-crypt89.tst;success;p4lang: macsec with none encryption
+http://sources.nop.hu/cfg/p4lang-crypt90.tst;p4lang-crypt90.tst;success;p4lang: macsec with none hash
 http://sources.nop.hu/cfg/p4lang-rout001.tst;p4lang-rout001.tst;success;p4lang: routing
 http://sources.nop.hu/cfg/p4lang-rout002.tst;p4lang-rout002.tst;success;p4lang: bridging
 http://sources.nop.hu/cfg/p4lang-rout003.tst;p4lang-rout003.tst;success;p4lang: mpls core
