@@ -1394,6 +1394,10 @@ qc pass: p4lang: macsec with aes192ecb
 qc pass: p4lang: macsec with aes256ecb
 qc pass: p4lang: macsec with sha224
 qc pass: p4lang: macsec with sha384
+qc pass: p4lang: openvpn with none encryption
+qc pass: p4lang: openvpn with none hash
+qc pass: p4lang: macsec with none encryption
+qc pass: p4lang: macsec with none hash
 qc pass: p4lang: routing
 qc pass: p4lang: bridging
 qc pass: p4lang: mpls core
