@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.1.30-cur, done by cs@nop.<br/>
-tested: 2022-01-30 08:48:30, took 00:06:29, with 100 workers, on 2638 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2022-01-30 08:57:12, took 00:07:15, with 100 workers, on 2642 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1411,6 +1411,10 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt84.tst">p4lang-crypt84.tst</a></td><td>success</td><td>p4lang: macsec with aes256ecb</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt85.tst">p4lang-crypt85.tst</a></td><td>success</td><td>p4lang: macsec with sha224</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt86.tst">p4lang-crypt86.tst</a></td><td>success</td><td>p4lang: macsec with sha384</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt87.tst">p4lang-crypt87.tst</a></td><td>success</td><td>p4lang: openvpn with none encryption</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt88.tst">p4lang-crypt88.tst</a></td><td>success</td><td>p4lang: openvpn with none hash</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt89.tst">p4lang-crypt89.tst</a></td><td>success</td><td>p4lang: macsec with none encryption</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt90.tst">p4lang-crypt90.tst</a></td><td>success</td><td>p4lang: macsec with none hash</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-rout001.tst">p4lang-rout001.tst</a></td><td>success</td><td>p4lang: routing</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-rout002.tst">p4lang-rout002.tst</a></td><td>success</td><td>p4lang: bridging</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-rout003.tst">p4lang-rout003.tst</a></td><td>success</td><td>p4lang: mpls core</td></tr>
